Translation update done using Pootle.

--- a/po/tr.po
+++ b/po/tr.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.5.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2011-08-04 14:01+0200\n"
-"PO-Revision-Date: 2011-08-04 18:40+0200\n"
+"PO-Revision-Date: 2011-08-04 19:00+0200\n"
 "Last-Translator: Burak Yavuz <hitowerdigit@hotmail.com>\n"
 "Language-Team: turkish <tr@li.org>\n"
 "Language: tr\n"
@@ -10068,8 +10068,9 @@ msgstr ""
 "simgesini kullanarak herhangi bir çizelgeyi kaldırabilirsiniz. "
 "<p>Günlüklerden sorguları görüntülemek için herhangi bir çizelgede sol fare "
 "tuşunu basılı tutarak ve çizelge üzerinde kaydırarak ilgili zaman aralığını "
-"seçin. Bir kere onaylandı mı, bu gruplanmış sorguların tablolarını "
-"yükleyecek.</p>"
+"seçin. Bir kere onaylandı mı bu, gruplanmış sorguların tablolarını "
+"yükleyecek. Daha fazla çözümlemesi için herhangi bir meydana gelen SELECT "
+"ifadesine tıklayabilirsiniz.</p>"
 
 #: server_status.php:1458
 msgid ""
