Translation update done using Pootle.

--- a/po/tr.po
+++ b/po/tr.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.5.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2011-08-04 14:01+0200\n"
-"PO-Revision-Date: 2011-08-04 19:00+0200\n"
+"PO-Revision-Date: 2011-08-04 19:03+0200\n"
 "Last-Translator: Burak Yavuz <hitowerdigit@hotmail.com>\n"
 "Language-Team: turkish <tr@li.org>\n"
 "Language: tr\n"
@@ -10009,6 +10009,8 @@ msgid ""
 "The arrangement of the charts is stored to the browsers local storage. You "
 "may want to export it if you have a complicated set up."
 msgstr ""
+"Çizelgelerin ayarlanması tarayıcının yerel deposunda depolanır. Eğer karışık "
+"ayarlamalarınız varsa, bunu dışa aktarmak isteyebilirsiniz."
 
 #: server_status.php:1431
 #| msgid "Restore default value"
