Translation update done using Pootle.

--- a/po/tr.po
+++ b/po/tr.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.5.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2011-08-04 14:01+0200\n"
-"PO-Revision-Date: 2011-08-04 19:03+0200\n"
+"PO-Revision-Date: 2011-08-04 19:08+0200\n"
 "Last-Translator: Burak Yavuz <hitowerdigit@hotmail.com>\n"
 "Language-Team: turkish <tr@li.org>\n"
 "Language: tr\n"
@@ -10042,6 +10042,10 @@ msgid ""
 "table is supported by MySQL 5.1.6 and onwards. You may still use the server "
 "charting features however."
 msgstr ""
+"Ne yazık ki Veritabanı sunucunuz phpMyAdmin ile veritabanı günlüklerini "
+"çözümlemek için gereken tabloları günlüklemeyi desteklemiyor. Tabloyu "
+"günlükleme MySQL 5.1.6 ve sonrakiler tarafından desteklenir. Yinede hala "
+"sunucu çizelgeleme özelliklerini kullanabilirsiniz."
 
 #: server_status.php:1453
 #| msgid ""
