--- a/po/en_GB.po
+++ b/po/en_GB.po
@@ -1439,6 +1439,9 @@ msgid ""
 "This is most likely because your session expired. Reloading the page and "
 "reentering your credentials should help."
 msgstr ""
+"While requesting new chart data the server returned an invalid response. "
+"This is most likely because your session expired. Reloading the page and "
+"reentering your credentials should help."
 
 #: js/messages.php:178
 #, fuzzy
