--- a/po/fr.po
+++ b/po/fr.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.5.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2011-08-04 14:01+0200\n"
-"PO-Revision-Date: 2011-08-04 21:48+0200\n"
+"PO-Revision-Date: 2011-08-04 21:49+0200\n"
 "Last-Translator: Marc Delisle <marc@infomarc.info>\n"
 "Language-Team: french <fr@li.org>\n"
 "Language: fr\n"
@@ -1196,7 +1196,7 @@ msgstr "Zone d'échange totale"
 
 #: js/messages.php:108
 msgid "Cached Swap"
-msgstr ""
+msgstr "Zone d'échange en cache"
 
 #: js/messages.php:109
 msgid "Used Swap"
