--- a/po/fr.po
+++ b/po/fr.po
@@ -1239,10 +1239,9 @@ msgid "Remove chart"
 msgstr "Supprimer le graphique"
 
 #: js/messages.php:122
-#, fuzzy
 #| msgid "Edit labels and series"
 msgid "Edit title and labels"
-msgstr "Éditer étiquettes et séries"
+msgstr "Éditer titre et étiquettes"
 
 #: js/messages.php:123
 msgid "Add chart to grid"
