Translation update done using Pootle.

--- a/po/de.po
+++ b/po/de.po
@@ -1215,10 +1215,9 @@ msgid "Bytes sent"
 msgstr "Bytes gesendet"
 
 #: js/messages.php:113
-#, fuzzy
 #| msgid "Received"
 msgid "Bytes received"
-msgstr "Empfangen"
+msgstr "Bytes empfangen"
 
 #: js/messages.php:114 server_status.php:991
 msgid "Connections"
