Translation update done using Pootle.

--- a/po/de.po
+++ b/po/de.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.5.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2011-08-04 14:01+0200\n"
-"PO-Revision-Date: 2011-08-05 02:25+0200\n"
+"PO-Revision-Date: 2011-08-05 02:26+0200\n"
 "Last-Translator: Sven Strickroth <email@cs-ware.de>\n"
 "Language-Team: german <de@li.org>\n"
 "Language: de\n"
@@ -10117,6 +10117,9 @@ msgid ""
 "The arrangement of the charts is stored to the browsers local storage. You "
 "may want to export it if you have a complicated set up."
 msgstr ""
+"Die Anordnungen der Schaubilder werden im Browser Local-Storage gespeichert. "
+"Es empfiehlt sich dieses zu exportieren, wenn Sie eine aufwändige Anordnung "
+"eingerichtet haben."
 
 #: server_status.php:1431
 #, fuzzy
