Translation update done using Pootle.

--- a/po/de.po
+++ b/po/de.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.5.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2011-08-04 14:01+0200\n"
-"PO-Revision-Date: 2011-08-05 03:37+0200\n"
+"PO-Revision-Date: 2011-08-05 03:43+0200\n"
 "Last-Translator: Sven Strickroth <email@cs-ware.de>\n"
 "Language-Team: german <de@li.org>\n"
 "Language: de\n"
@@ -9279,6 +9279,19 @@ msgid ""
 "at a time, observe or benchmark your database, and \n"
 "        undo the change if there was no clearly measurable improvement."
 msgstr ""
+"Der Ratgeber kann Empfehlungen zu Server-Variablen durch Analyse der Server-"
+"Status-Variablen geben. \n"
+"        Bitte beachten Sie jedoch, dass diese Empfehlungen auf einfachen "
+"Berechnungen und Faustregeln basieren und \n"
+"        müssen nicht umbedingt auf Ihrem System funktionieren.\n"
+"        Bevor Sie Änderungen an der Konfiguration vornehmen, seien Sie sich "
+"sicher, was Sie ändern und wie Sie die Änderungen rückgängig machen können. "
+"Falsches Tuning\n"
+"        kann sehr negative Effekte hervorrufen.\n"
+"        Der beste Weg das System zu optimieren ist es genau eine Einstellung "
+"auf einmal zu ändern, die Leistungsfähigkeit der Datenbank zu testen und \n"
+"        die Änderungen zurückzunehmen, falls es keine klar messbaren "
+"Verbesserungen gab."
 
 #. l10n: Questions is the name of a MySQL Status variable
 #: server_status.php:790
