Translation update done using Pootle.

--- a/po/de.po
+++ b/po/de.po
@@ -9283,7 +9283,7 @@ msgstr ""
 "Status-Variablen geben. \n"
 "        Bitte beachten Sie jedoch, dass diese Empfehlungen auf einfachen "
 "Berechnungen und Faustregeln basieren und \n"
-"        müssen nicht umbedingt auf Ihrem System funktionieren.\n"
+"        nicht umbedingt auf Ihrem System funktionieren müssen.\n"
 "        Bevor Sie Änderungen an der Konfiguration vornehmen, seien Sie sich "
 "sicher, was Sie ändern und wie Sie die Änderungen rückgängig machen können. "
 "Falsches Tuning\n"
