Translation update done using Pootle.

--- a/po/cs.po
+++ b/po/cs.po
@@ -1186,7 +1186,7 @@ msgstr "Swap celkem"
 
 #: js/messages.php:108
 msgid "Cached Swap"
-msgstr ""
+msgstr "Cachovaný swap"
 
 #: js/messages.php:109
 msgid "Used Swap"
