Translation update done using Pootle.

--- a/po/cs.po
+++ b/po/cs.po
@@ -1190,7 +1190,7 @@ msgstr "Cachovaný swap"
 
 #: js/messages.php:109
 msgid "Used Swap"
-msgstr ""
+msgstr "Využitý swap"
 
 #: js/messages.php:110
 #, fuzzy
