Translation update done using Pootle.

--- a/po/cs.po
+++ b/po/cs.po
@@ -1193,10 +1193,9 @@ msgid "Used Swap"
 msgstr "Využitý swap"
 
 #: js/messages.php:110
-#, fuzzy
 #| msgid "Free pages"
 msgid "Free Swap"
-msgstr "Volných stránek"
+msgstr "Volný swap"
 
 #: js/messages.php:112
 msgid "Bytes sent"
