--- a/po/cs.po
+++ b/po/cs.po
@@ -1202,10 +1202,9 @@ msgid "Bytes sent"
 msgstr "Odesláno bajtů"
 
 #: js/messages.php:113
-#, fuzzy
 #| msgid "Received"
 msgid "Bytes received"
-msgstr "Přijato"
+msgstr "Přijato bajtů"
 
 #: js/messages.php:114 server_status.php:991
 msgid "Connections"
