Translation update done using Pootle.

--- a/po/cs.po
+++ b/po/cs.po
@@ -1446,7 +1446,7 @@ msgstr "Znovu načíst stránku"
 
 #: js/messages.php:180
 msgid "Affected rows: "
-msgstr ""
+msgstr "Ovlivněné záznamy: "
 
 #: js/messages.php:182
 msgid "Failed parsing config file. It doesn't seem to be valid JSON code"
