--- a/po/cs.po
+++ b/po/cs.po
@@ -6245,10 +6245,9 @@ msgid "Stand-in structure for view"
 msgstr "Zástupná struktura pro pohled"
 
 #: libraries/export/sql.php:1071
-#, fuzzy
 #| msgid "Allows reading data."
 msgid "Error reading data:"
-msgstr "Umožňuje vybírat data."
+msgstr "Chyba při čtení dat:"
 
 #: libraries/export/xml.php:19 libraries/import/xml.php:21
 msgid "XML"
