--- a/po/cs.po
+++ b/po/cs.po
@@ -6320,10 +6320,10 @@ msgid "Go to table"
 msgstr "Přejít na tabulku"
 
 #: libraries/import.lib.php:1099
-#, fuzzy, php-format
+#, php-format
 #| msgid "Structure only"
 msgid "Structure of %s"
-msgstr "Pouze strukturu"
+msgstr "Struktura %s"
 
 #: libraries/import.lib.php:1105
 msgid "Go to view"
