Translation update done using Pootle.

--- a/po/ko.po
+++ b/po/ko.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.5.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2011-08-05 10:53+0200\n"
-"PO-Revision-Date: 2011-08-05 13:34+0200\n"
+"PO-Revision-Date: 2011-08-05 13:35+0200\n"
 "Last-Translator: Chung-Ook Lee <hantip@gmail.com>\n"
 "Language-Team: korean <ko@li.org>\n"
 "Language: ko\n"
@@ -11090,7 +11090,7 @@ msgstr ""
 
 #: tbl_tracking.php:698
 msgid "Activate now"
-msgstr ""
+msgstr "지금 활성화"
 
 #: tbl_tracking.php:711
 #, php-format
