Translation update done using Pootle.

--- a/po/ko.po
+++ b/po/ko.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.5.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2011-08-05 10:53+0200\n"
-"PO-Revision-Date: 2011-08-05 13:38+0200\n"
+"PO-Revision-Date: 2011-08-05 13:41+0200\n"
 "Last-Translator: Chung-Ook Lee <hantip@gmail.com>\n"
 "Language-Team: korean <ko@li.org>\n"
 "Language: ko\n"
@@ -10975,7 +10975,7 @@ msgstr ""
 
 #: tbl_tracking.php:199
 msgid "SQL statements executed."
-msgstr ""
+msgstr "SQL 문장 실행됨"
 
 #: tbl_tracking.php:205
 msgid ""
