--- a/po/ko.po
+++ b/po/ko.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.5.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2011-08-05 10:53+0200\n"
-"PO-Revision-Date: 2011-08-05 13:41+0200\n"
+"PO-Revision-Date: 2011-08-05 13:42+0200\n"
 "Last-Translator: Chung-Ook Lee <hantip@gmail.com>\n"
 "Language-Team: korean <ko@li.org>\n"
 "Language: ko\n"
@@ -10868,7 +10868,7 @@ msgstr ""
 
 #: tbl_structure.php:168 tbl_structure.php:169
 msgid "Add primary key"
-msgstr ""
+msgstr "기본키 추가"
 
 #: tbl_structure.php:170 tbl_structure.php:171
 msgid "Add index"
