--- a/po/ko.po
+++ b/po/ko.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.5.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2011-08-05 10:53+0200\n"
-"PO-Revision-Date: 2011-08-05 13:42+0200\n"
+"PO-Revision-Date: 2011-08-05 13:43+0200\n"
 "Last-Translator: Chung-Ook Lee <hantip@gmail.com>\n"
 "Language-Team: korean <ko@li.org>\n"
 "Language: ko\n"
@@ -10876,7 +10876,7 @@ msgstr "인덱스 추가"
 
 #: tbl_structure.php:172 tbl_structure.php:173
 msgid "Add unique index"
-msgstr ""
+msgstr "유일 인덱스 추가"
 
 #: tbl_structure.php:174 tbl_structure.php:175
 msgid "Add SPATIAL index"
