Translation update done using Pootle.

--- a/po/ko.po
+++ b/po/ko.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.5.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2011-08-05 10:53+0200\n"
-"PO-Revision-Date: 2011-08-05 13:44+0200\n"
+"PO-Revision-Date: 2011-08-05 13:45+0200\n"
 "Last-Translator: Chung-Ook Lee <hantip@gmail.com>\n"
 "Language-Team: korean <ko@li.org>\n"
 "Language: ko\n"
@@ -10803,7 +10803,7 @@ msgstr "행(레코드) 통계"
 
 #: tbl_printview.php:344 tbl_structure.php:840
 msgid "static"
-msgstr ""
+msgstr "정적"
 
 #: tbl_printview.php:346 tbl_structure.php:842
 msgid "dynamic"
