--- a/po/ko.po
+++ b/po/ko.po
@@ -10738,9 +10738,8 @@ msgid "Empty the table (TRUNCATE)"
 msgstr ""
 
 #: tbl_operations.php:716
-#, fuzzy
 msgid "Delete the table (DROP)"
-msgstr "데이터베이스가 없습니다"
+msgstr "테이블 삭제(DROP)"
 
 #: tbl_operations.php:737
 #, fuzzy
