--- a/po/ko.po
+++ b/po/ko.po
@@ -95,7 +95,7 @@ msgstr "이 값을 사용합니다"
 #: bs_disp_as_mime_type.php:29 bs_play_media.php:35
 #: libraries/blobstreaming.lib.php:331
 msgid "No blob streaming server configured!"
-msgstr ""
+msgstr "blob streaming 서버 설정이 되지 않았습니다!"
 
 #: bs_disp_as_mime_type.php:35
 #, fuzzy
@@ -9374,15 +9374,15 @@ msgstr ""
 
 #: tbl_operations.php:741
 msgid "Check"
-msgstr ""
+msgstr "검사"
 
 #: tbl_operations.php:742
 msgid "Optimize"
-msgstr ""
+msgstr "옵티마이저"
 
 #: tbl_operations.php:743
 msgid "Rebuild"
-msgstr ""
+msgstr "리빌드"
 
 #: tbl_operations.php:744
 #, fuzzy
@@ -9423,7 +9423,7 @@ msgstr "명세"
 
 #: tbl_printview.php:377 tbl_structure.php:834
 msgid "static"
-msgstr ""
+msgstr "정적"
 
 #: tbl_printview.php:379 tbl_structure.php:836
 msgid "dynamic"
@@ -9454,7 +9454,7 @@ msgstr ""
 
 #: tbl_relation.php:410
 msgid "Foreign key constraint"
-msgstr ""
+msgstr "외래키 제약"
 
 #: tbl_row_action.php:28
 msgid "No rows selected"
@@ -9488,19 +9488,19 @@ msgstr ""
 
 #: tbl_structure.php:166 tbl_structure.php:167
 msgid "Add primary key"
-msgstr ""
+msgstr "기본키 추가"
 
 #: tbl_structure.php:168 tbl_structure.php:169
 msgid "Add index"
-msgstr ""
+msgstr "인덱스 추가"
 
 #: tbl_structure.php:170 tbl_structure.php:171
 msgid "Add unique index"
-msgstr ""
+msgstr "유일 인덱스 추가"
 
 #: tbl_structure.php:172 tbl_structure.php:173
 msgid "Add FULLTEXT index"
-msgstr ""
+msgstr "FULLTEXT 인덱스 추가"
 
 #: tbl_structure.php:385
 #, fuzzy
@@ -9590,7 +9590,7 @@ msgstr ""
 
 #: tbl_tracking.php:208
 msgid "SQL statements executed."
-msgstr ""
+msgstr "SQL 문장 실행됨"
 
 #: tbl_tracking.php:215
 msgid ""
@@ -9635,11 +9635,11 @@ msgstr ""
 
 #: tbl_tracking.php:501
 msgid "SQL dump (file download)"
-msgstr ""
+msgstr "SQL 덤프(파일 다운로드)"
 
 #: tbl_tracking.php:502
 msgid "SQL dump"
-msgstr ""
+msgstr "SQL 덤프"
 
 #: tbl_tracking.php:503
 msgid "This option will replace your table and contained data."
@@ -9647,7 +9647,7 @@ msgstr ""
 
 #: tbl_tracking.php:503
 msgid "SQL execution"
-msgstr ""
+msgstr "SQL 실행"
 
 #: tbl_tracking.php:515
 #, php-format
@@ -9656,7 +9656,7 @@ msgstr ""
 
 #: tbl_tracking.php:555
 msgid "Show versions"
-msgstr ""
+msgstr "버전 보기"
 
 #: tbl_tracking.php:587
 #, fuzzy
@@ -9670,7 +9670,7 @@ msgstr ""
 
 #: tbl_tracking.php:637
 msgid "Deactivate now"
-msgstr ""
+msgstr "지금 비활성화"
 
 #: tbl_tracking.php:648
 #, php-format
@@ -9679,7 +9679,7 @@ msgstr ""
 
 #: tbl_tracking.php:650
 msgid "Activate now"
-msgstr ""
+msgstr "지금 활성화"
 
 #: tbl_tracking.php:663
 #, php-format
@@ -9708,7 +9708,7 @@ msgstr ""
 
 #: themes.php:41
 msgid "Get more themes!"
-msgstr ""
+msgstr "더 많은 테마들!"
 
 #: transformation_overview.php:24
 msgid "Available MIME types"
@@ -9739,7 +9739,7 @@ msgstr "프로파일을 업데이트했습니다."
 
 #: view_create.php:141
 msgid "VIEW name"
-msgstr ""
+msgstr "뷰 이름"
 
 #: view_operations.php:91
 #, fuzzy
