--- a/po/ko.po
+++ b/po/ko.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.5.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2011-08-05 10:53+0200\n"
-"PO-Revision-Date: 2011-08-05 13:47+0200\n"
+"PO-Revision-Date: 2011-08-05 13:48+0200\n"
 "Last-Translator: Chung-Ook Lee <hantip@gmail.com>\n"
 "Language-Team: korean <ko@li.org>\n"
 "Language: ko\n"
@@ -10735,7 +10735,7 @@ msgstr "테이블의 덤프 데이터"
 
 #: tbl_operations.php:696
 msgid "Empty the table (TRUNCATE)"
-msgstr ""
+msgstr "테이블 내용 비우기(TRUNCATE)"
 
 #: tbl_operations.php:716
 msgid "Delete the table (DROP)"
