Translation update done using Pootle.

--- a/po/ko.po
+++ b/po/ko.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.5.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2011-08-05 10:53+0200\n"
-"PO-Revision-Date: 2011-08-05 13:56+0200\n"
+"PO-Revision-Date: 2011-08-05 13:57+0200\n"
 "Last-Translator: Chung-Ook Lee <hantip@gmail.com>\n"
 "Language-Team: korean <ko@li.org>\n"
 "Language: ko\n"
@@ -10379,7 +10379,7 @@ msgstr ""
 
 #: setup/lib/index.lib.php:389
 msgid "Key is too short, it should have at least 8 characters."
-msgstr ""
+msgstr "키가 너무 짧다. 8글자 이상 사용"
 
 #: setup/lib/index.lib.php:396
 msgid "Key should contain letters, numbers [em]and[/em] special characters."
