--- a/po/ko.po
+++ b/po/ko.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.5.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2011-08-05 10:53+0200\n"
-"PO-Revision-Date: 2011-08-05 13:57+0200\n"
+"PO-Revision-Date: 2011-08-05 13:58+0200\n"
 "Last-Translator: Chung-Ook Lee <hantip@gmail.com>\n"
 "Language-Team: korean <ko@li.org>\n"
 "Language: ko\n"
@@ -10402,7 +10402,7 @@ msgstr ""
 
 #: sql.php:678
 msgid "Showing as PHP code"
-msgstr ""
+msgstr "PHP 코드 보기"
 
 #: sql.php:681 tbl_replace.php:343
 msgid "Showing SQL query"
