--- a/po/ko.po
+++ b/po/ko.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.5.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2011-08-05 10:53+0200\n"
-"PO-Revision-Date: 2011-08-05 14:06+0200\n"
+"PO-Revision-Date: 2011-08-05 14:07+0200\n"
 "Last-Translator: Chung-Ook Lee <hantip@gmail.com>\n"
 "Language-Team: korean <ko@li.org>\n"
 "Language: ko\n"
@@ -10206,7 +10206,7 @@ msgstr "phpMyAdmin 설명서"
 
 #: setup/frames/index.inc.php:241
 msgid "Donate"
-msgstr ""
+msgstr "기부"
 
 #: setup/frames/servers.inc.php:28
 msgid "Edit server"
